# positive-news-crawler

./: .env.example  .gitignore  AGENTS.md  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
AGENTS/: ENV.md  HISTORY.md  MEMORY.md  SPEC.md  STATE.md
collector/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
collector/migrations/: 0001_initial.py  0002_exchange_contract.py  0003_evaluation_models.py  0004_evaluation_contract.py  0005_latestevaluationscore.py  0006_newstranslation.py
collector/services/: crawler.py  db.py  fetch.py  ingest.py  maintenance.py  manual_review.py  model_router.py  text.py  translation.py
deploy/: newscrawler.env.example
deploy/nginx/: newscrawler.conf
deploy/systemd/: newsagg-web.service  newsagg-worker.service  newscrawler-web.service  newscrawler-worker.service
docs/: database-contract.md  ubuntu-deployment.md
docs/adr/: 0001-single-host-sqlite.md
examples/: selector_client.py
newsagg/: settings.py  urls.py  wsgi.py
newscrawler/: settings.py  urls.py  wsgi.py
scripts/: install.ps1  install.sh  register-windows-tasks.ps1  update-ubuntu.sh
templates/: base.html
templates/collector/: _events.html  _runs.html  dashboard.html  event_list.html  news_detail.html  news_list.html  run_list.html  source_detail.html  source_form.html  source_list.html
templates/registration/: login.html
tests/: conftest.py  test_exchange.py  test_fetch.py  test_ingest.py  test_maintenance.py  test_news_actions.py  test_news_detail.py  test_news_filters.py  test_text.py  test_ui.py  test_worker.py
(+3 files in other folders)
