[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "positive-news-aggregator"
version = "0.1.0"
description = "A small multilingual news aggregator with SQLite feedback loop"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
  "Django>=5.2,<5.3",
  "feedparser>=6.0.12,<7",
  "trafilatura>=2.0,<3",
  "playwright>=1.52,<2",
  "lxml>=5.3,<7",
  "cssselect>=1.3,<2",
  "waitress>=3.0,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-django>=4.10,<5",
  "coverage>=7.6,<8",
]

[tool.setuptools.packages.find]
include = ["newsagg*", "collector*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "newsagg.settings"
python_files = ["test_*.py"]
addopts = "-ra"

